--- a/app/res/layout/track_list.xml
+++ b/app/res/layout/track_list.xml
@@ -1,43 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:orientation="vertical"
-	android:layout_width="fill_parent"
-	android:minHeight="?android:attr/listPreferredItemHeight"
-    android:gravity="center_vertical"
-    android:paddingLeft="10dip"
-   >
-	 
-	<TextView
-		android:textAppearance="?android:attr/textAppearanceLarge"
-		android:id="@+id/text1"
-		android:text="name"
-		android:singleLine="true"
-		
-		android:layout_alignParentTop="true"
-        android:layout_width="wrap_content"
-		android:layout_height="wrap_content" 
-		/>
-	<TextView
-		android:id="@+id/text_small"
-		android:text="type"
-		
-		android:textColor="@drawable/gray_text_color"
-		android:layout_below="@id/text1"
-		android:layout_alignParentBottom="true"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		/>
-	<CheckBox
-        android:id="@+id/more_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        
-        android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        
-        android:focusable="false"
-        android:button="@drawable/more_icon"
-        />
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  style="@style/list_item">
+
+    <TextView
+      style="@style/title"
+      android:id="@+id/title" />
+
+    <TextView
+      style="@style/subtitle"
+      android:id="@+id/type"
+      android:layout_below="@id/title" />
+
 </RelativeLayout>
