--- a/app/res/values/colors.xml
+++ b/app/res/values/colors.xml
@@ -1,25 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- 
-    Copyright (C) 2009 Virgil Dobjanschi, Jeff Sharkey
-    
-    Licensed under the Apache License, Version 2.0 (the "License");
-    you may not use this file except in compliance with the License.
-    You may obtain a copy of the License at
-    
-         http://www.apache.org/licenses/LICENSE-2.0
-    
-    Unless required by applicable law or agreed to in writing, software
-    distributed under the License is distributed on an "AS IS" BASIS,
-    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-    See the License for the specific language governing permissions and
-    limitations under the License.
--->
-
 <resources>
-	<drawable name="solid_white">#ffffffff</drawable>
-	<drawable name="solid_black">#ff000000</drawable>
-	<drawable name="gray_text_color">#ffaaaaaa</drawable>
-	<drawable name="dark_gray">#333</drawable>
-	<drawable name="dark_green">#007</drawable>
-	<drawable name="fosdem_blue">#ff0b4763</drawable>
+    <color name="title">#fff</color>
+    <color name="subtitle">#aaa</color>
+    <color name="fosdem_blue">#0b4763</color>
 </resources>
