--- a/app/res/layout/about.xml
+++ b/app/res/layout/about.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="fill_parent" 
+    android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:padding="10dip">
 
@@ -12,7 +12,7 @@
         android:layout_marginBottom="8dip"
         android:autoLink="web"
         android:textSize="16sp"
-        android:textColor="#ffff"
+        android:textColor="@color/about_text"
         />
 	<TextView
         android:layout_width="fill_parent"
@@ -21,8 +21,8 @@
         android:layout_marginBottom="8dip"
         android:autoLink="web"
         android:textSize="16sp"
-        android:textColor="#ffff"
-        /> 
+        android:textColor="@color/about_text"
+        />
 	<TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -30,6 +30,6 @@
         android:layout_marginBottom="8dip"
         android:autoLink="web"
         android:textSize="16sp"
-        android:textColor="#ffff"
+        android:textColor="@color/about_text"
         />
 </LinearLayout>
