--- a/app/res/layout/about.xml
+++ b/app/res/layout/about.xml
@@ -1,35 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
+
+	<LinearLayout
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_height="wrap_content"
     android:padding="10dip">
+		<TextView
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content"
+	        android:text="@string/about_text1"
+	        android:layout_marginBottom="8dip"
+	        android:autoLink="web"
+	        android:textSize="16sp"
+	        android:textColor="@color/about_text"
+	        />
+		<TextView
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content"
+	        android:text="@string/about_text2"
+	        android:layout_marginBottom="8dip"
+	        android:autoLink="web"
+	        android:textSize="16sp"
+	        android:textColor="@color/about_text"
+	        />
+		<TextView
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content"
+	        android:text="@string/about_text3"
+	        android:layout_marginBottom="8dip"
+	        android:autoLink="web"
+	        android:textSize="16sp"
+	        android:textColor="@color/about_text"
+	        />
+	</LinearLayout>
 
-	<TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/about_text1"
-        android:layout_marginBottom="8dip"
-        android:autoLink="web"
-        android:textSize="16sp"
-        android:textColor="@color/about_text"
-        />
-	<TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/about_text2"
-        android:layout_marginBottom="8dip"
-        android:autoLink="web"
-        android:textSize="16sp"
-        android:textColor="@color/about_text"
-        />
-	<TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/about_text3"
-        android:layout_marginBottom="8dip"
-        android:autoLink="web"
-        android:textSize="16sp"
-        android:textColor="@color/about_text"
-        />
-</LinearLayout>
+</ScrollView>
