--- a/app/res/layout/main.xml
+++ b/app/res/layout/main.xml
@@ -60,12 +60,14 @@
 	      android:layout_alignParentBottom="true"
 	      android:gravity="bottom">
 		    <LinearLayout
+		      android:layout_width="fill_parent"
 		      android:alpha="0.5"
 		      android:background="#ffffff"
 		      android:padding="5dp"
 		      android:orientation="vertical">
 			    <TextView
-			      android:id="@+id/progress" />
+			      android:id="@+id/progress"
+			      android:visibility="gone" />
 			    <TextView
 			      android:id="@+id/db_ver" />
 			</LinearLayout>
