--- a/app/res/layout/event_list.xml
+++ b/app/res/layout/event_list.xml
@@ -1,37 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  style="@style/list_item">
 
-    <TextView
-      style="@style/event_title"
-      android:id="@+id/title" />
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/favorite"
-        android:layout_below="@id/title"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-		android:layout_width="14sp"
-		android:layout_height="14sp"
-		android:layout_marginTop="3dp"
-		android:scaleType="fitXY" />
+    <com.emilsjolander.components.stickylistheaders.StickyListHeadersListView
+        android:id="@+id/list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:divider="@color/list_divider"
+    	android:dividerHeight="1dp" />
 
-    <TextView
-      style="@style/subtitle"
-      android:id="@+id/speakers"
-      android:layout_below="@id/title"
-      android:textStyle="bold" />
-
-    <TextView
-      style="@style/subtitle"
-      android:id="@+id/time"
-      android:layout_below="@id/speakers" />
-
-    <TextView
-      style="@style/subtitle"
-      android:id="@+id/room"
-      android:layout_below="@id/speakers"
-      android:layout_alignParentRight="true" />
-
-</RelativeLayout>
+</LinearLayout>
