--- a/app/res/values-v11/colors.xml
+++ b/app/res/values-v11/colors.xml
@@ -4,4 +4,7 @@
     <color name="subtitle">#aaa</color>
     <color name="fosdem_blue">#0b4763</color>
     <color name="about_text">#000</color>
+    <color name="header_text">#ff33b5e5</color>
+    <color name="list_divider">#ffcc00</color>
+    <color name="list_background">#fff</color>
 </resources>
