--- a/app/res/values-v11/themes.xml
+++ b/app/res/values-v11/themes.xml
@@ -21,13 +21,35 @@
         <item name="android:alpha">0.7</item>
     </style>
 
+    <style name="list_header">
+        <item name="android:layout_width">match_parent</item>
+	    <item name="android:layout_height">100dp</item>
+	    <item name="android:gravity">bottom</item>
+	    <item name="android:orientation">vertical</item>
+	    <item name="android:background">@color/list_background</item>
+    </style>
+
+    <style name="list_header_text">
+		<item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">left</item>
+        <item name="android:paddingLeft">10dp</item>
+        <item name="android:paddingRight">10dp</item>
+        <item name="android:paddingTop">10dp</item>
+        <item name="android:textColor">@color/header_text</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textAllCaps">true</item>
+    </style>
+
     <style name="list_item">
         <item name="android:minHeight">?android:listPreferredItemHeight</item>
-        <item name="android:paddingLeft">8dp</item>
-        <item name="android:paddingRight">8dp</item>
+        <item name="android:paddingLeft">10dp</item>
+        <item name="android:paddingRight">10dp</item>
         <item name="android:paddingTop">2dp</item>
         <item name="android:paddingBottom">2dp</item>
         <item name="android:gravity">center_vertical</item>
+        <item name="android:background">@color/list_background</item>
     </style>
 
     <style name="title">
