Slightly improved track list layout.

--- a/app/res/layout/event_list.xml
+++ b/app/res/layout/event_list.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:divider="@color/list_divider"
-    	android:dividerHeight="1dp" />
+    	android:dividerHeight="1dp"
+    	android:fastScrollEnabled="true" />
 
 </LinearLayout>
