--- a/app/res/layout/track_list.xml
+++ b/app/res/layout/track_list.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  style="@style/list_item">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <TextView
-      style="@style/title"
-      android:id="@+id/title" />
+    <ListView
+        android:id="@android:id/list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:divider="@color/list_divider"
+    	android:dividerHeight="1dp"
+    	android:fastScrollEnabled="true">
+    </ListView>
 
-    <TextView
-      style="@style/subtitle"
-      android:id="@+id/type"
-      android:layout_below="@id/title" />
-
-</RelativeLayout>
+</LinearLayout>
