--- a/app/res/layout/event.xml
+++ b/app/res/layout/event.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView 
-  xmlns:android="http://schemas.android.com/apk/res/android" 
-  android:layout_width="fill_parent" 
+<ScrollView
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   android:fillViewport="true">
 
@@ -9,91 +9,115 @@
       android:layout_width="fill_parent"
       android:orientation="vertical">
 
-    <LinearLayout 
-      android:layout_width="fill_parent" 
-      android:background="@drawable/event_header"
-      android:orientation="horizontal">
+	    <LinearLayout
+	      android:layout_width="fill_parent"
+	      android:orientation="horizontal">
 
-        <TextView
-          style="@style/title"
-          android:id="@+id/event_title"
-          android:layout_width="0px"
-          android:layout_weight="1"
-          android:paddingLeft="8dp"
-          android:paddingTop="5dp"
-          android:paddingBottom="5dp" />
+	        <TextView
+	          style="@style/title"
+	          android:id="@+id/event_title"
+	          android:layout_width="0px"
+	          android:layout_weight="1"
+	          android:paddingLeft="8dp"
+	          android:paddingTop="5dp"
+	          android:paddingBottom="5dp"
+	          android:textColor="@color/event_title_text" />
 
-        <org.fosdem.views.FavoriteButton
-          android:id="@+id/favoriteButton"
-          android:paddingLeft="5dp"
-          android:paddingRight="5dp"
-          android:paddingTop="3dp"
-          android:paddingBottom="3dp" />
-        
-    </LinearLayout>
+	        <org.fosdem.views.FavoriteButton
+	          android:id="@+id/favoriteButton"
+	          android:paddingLeft="5dp"
+	          android:paddingRight="5dp"
+	          android:paddingTop="3dp"
+	          android:paddingBottom="3dp" />
 
-    <RelativeLayout
-      android:layout_width="fill_parent" 
-      android:paddingLeft="8dp"
-      android:paddingRight="8dp"
-      android:background="#006677">
+	    </LinearLayout>
 
-        <TextView 
-          android:id="@+id/event_speaker" 
-          android:textColor="#BBB" />
+	    <RelativeLayout
+	      android:layout_width="fill_parent"
+	      android:paddingLeft="8dp"
+	      android:paddingRight="8dp"
+	      android:paddingTop="3dp"
+	      android:paddingBottom="3dp"
+	      android:background="@color/fosdem_purple">
 
-        <TextView 
-          android:id="@+id/event_track"
-          android:textColor="#BBB"
-          android:layout_alignParentRight="true" />
+	        <LinearLayout
+	            android:id="@+id/speaker_layout_wrap"
+	            android:layout_width="fill_parent"
+	            android:orientation="horizontal">
 
-        <TextView 
-          android:id="@+id/event_room" 
-          android:layout_below="@id/event_track"
-          android:textColor="#BBB" />
-        	
-        <TextView 
-          android:id="@+id/event_time" 
-          android:textColor="#BBB" 
-          android:layout_below="@id/event_track"
-          android:layout_alignParentRight="true" />	
+	            <TextView
+		          android:id="@+id/event_speaker"
+		          android:textColor="@color/event_meta_text"
+		          android:layout_weight=".55"
+		          android:layout_height="wrap_content"
+		          android:layout_width="0dip" />
 
-    </RelativeLayout>
+		        <TextView
+		          android:id="@+id/event_track"
+		          android:textColor="@color/event_meta_text"
+		          android:layout_weight=".45"
+		          android:layout_gravity="right"
+		          android:gravity="right"
+		          android:layout_height="wrap_content"
+		          android:layout_width="0dip" />
 
-    <RelativeLayout 
-            android:id="@+id/BodyLayout" 
-            android:layout_width="fill_parent" 
-            android:layout_height="wrap_content" 
-            android:orientation="vertical" 
-            android:background="#ecfaff"
-        	>
-        <TextView 
-            android:text="event_abstract" 
-            android:id="@+id/event_abstract" 
-            android:layout_width="fill_parent" 
-            android:layout_height="wrap_content" 
-            android:textColor="#333" 
-            android:padding="4dip"
-            android:layout_margin="10dip"
-            android:background="#d9f7ff"
-        	/>
-        	
-        <TextView 
-            android:text="event_description" 
-            android:id="@+id/event_description" 
-            android:layout_width="fill_parent" 
-            android:layout_height="fill_parent"
-            android:layout_below="@id/event_abstract" 
-            android:textColor="#000"
-            android:paddingLeft="10dip"
-            android:paddingRight="10dip"
-            android:paddingBottom="10dip"
-        	/>
+	        </LinearLayout>
+
+	        <LinearLayout
+	            android:id="@+id/room_time_wrap"
+	            android:layout_width="fill_parent"
+	            android:orientation="horizontal"
+	            android:layout_below="@id/speaker_layout_wrap">
+
+		        <TextView
+		          android:id="@+id/event_room"
+		          android:textColor="@color/event_meta_text"
+		          android:layout_weight=".45"
+		          android:layout_height="wrap_content"
+		          android:layout_width="0dip" />
+
+		        <TextView
+		          android:id="@+id/event_time"
+		          android:textColor="@color/event_meta_text"
+		          android:layout_weight=".55"
+		          android:layout_gravity="right"
+		          android:gravity="right"
+		          android:layout_height="wrap_content"
+		          android:layout_width="0dip" />
+
+		    </LinearLayout>
+
+	    </RelativeLayout>
+
+	    <RelativeLayout
+	            android:id="@+id/BodyLayout"
+	            android:layout_width="fill_parent"
+	            android:layout_height="wrap_content"
+	            android:orientation="vertical">
+	        <TextView
+	            android:text="event_abstract"
+	            android:id="@+id/event_abstract"
+	            android:layout_width="fill_parent"
+	            android:layout_height="wrap_content"
+	            android:textColor="@color/event_abstract_text"
+	            android:padding="4dip"
+	            android:layout_margin="10dip"
+	            android:background="@color/event_abstract_background" />
+
+	        <TextView
+	            android:text="event_description"
+	            android:id="@+id/event_description"
+	            android:layout_width="fill_parent"
+	            android:layout_height="fill_parent"
+	            android:layout_below="@id/event_abstract"
+	            android:textColor="@color/event_description_text"
+	            android:paddingLeft="10dip"
+	            android:paddingRight="10dip"
+	            android:paddingBottom="10dip" />
         </RelativeLayout>
         <ImageView
             android:id="@+id/room_image"
-            android:layout_width="fill_parent" 
-            android:layout_height="wrap_content" 
-        	/>
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 </ScrollView>
