--- a/app/res/menu/event_menu.xml
+++ b/app/res/menu/event_menu.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+  <item android:id="@+id/MENU_TOGGLEFAVORITES"
+        android:showAsAction="ifRoom"
+        android:icon="@drawable/rating_important"
+        android:title="@string/menu_favorites" />
   <item android:id="@+id/MENU_SHARE"
         android:showAsAction="ifRoom"
         android:icon="@drawable/social_share"
