--- a/app/res/values/colors.xml
+++ b/app/res/values/colors.xml
@@ -3,11 +3,16 @@
     <color name="title">#fff</color>
     <color name="subtitle">#aaa</color>
     <color name="fosdem_blue">#0b4763</color>
-    <color name="fosdem_purple">#bd6bae</color>
+    <color name="fosdem_purple">#ab1b93</color>
     <color name="about_text">#fff</color>
     <color name="header_text">#ff33b5e5</color>
     <color name="list_divider">#e6e6e6</color>
     <color name="list_text">#000</color>
     <color name="list_background">#fff</color>
     <color name="window_background">#fff</color>
+    <color name="event_title_text">#222</color>
+    <color name="event_meta_text">#eee</color>
+    <color name="event_abstract_background">#ddd</color>
+    <color name="event_abstract_text">#222</color>
+    <color name="event_description_text">#000</color>
 </resources>
