--- a/app/res/layout/event.xml
+++ b/app/res/layout/event.xml
@@ -111,6 +111,7 @@
         <ImageView
             android:id="@+id/room_image"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp" />
     </LinearLayout>
 </ScrollView>
