--- a/app/res/layout/main.xml
+++ b/app/res/layout/main.xml
@@ -15,50 +15,66 @@
 	    android:layout_width="fill_parent"
 		android:layout_height="fill_parent"
 	    android:orientation="vertical"
-	    android:layout_marginTop="20dp"
-	    android:layout_marginLeft="10dp"
-	    android:layout_marginRight="10dp">
+	    android:background="@drawable/main_header_gradient">
 
 	    <LinearLayout
-	      android:id="@+id/btn_box"
-	      android:layout_width="fill_parent"
-	      android:orientation="horizontal">
+	        android:id="@+id/button_wrap"
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content"
+	        android:orientation="vertical"
+		    android:paddingTop="20dp"
+		    android:paddingLeft="10dp"
+		    android:paddingRight="10dp"
+		    android:paddingBottom="20dp">
 
-	        <Button
-	          style="@style/day_button"
-	          android:id="@+id/btn_day_1"
-	          android:drawableStart="@drawable/content_event"
-	          android:text="@string/main_saturday" />
+	        <ImageView
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:src="@drawable/fosdem"
+				android:scaleType="centerInside"
+				android:layout_marginBottom="10dp" />
 
-	        <Button
-	          style="@style/day_button"
-	          android:id="@+id/btn_day_2"
-	          android:drawableStart="@drawable/content_event"
-	          android:text="@string/main_sunday" />
+		    <LinearLayout
+		      android:id="@+id/btn_box"
+		      android:layout_width="fill_parent"
+		      android:orientation="horizontal">
 
-	    </LinearLayout>
+		        <Button
+		          style="@style/day_button"
+		          android:id="@+id/btn_day_1"
+		          android:drawableStart="@drawable/content_event"
+		          android:text="@string/main_saturday" />
 
-	    <LinearLayout
-	      android:id="@+id/btn_box_two"
-	      android:layout_below="@id/btn_box"
-	      android:layout_width="fill_parent"
-	      android:layout_height="wrap_content"
-	      android:orientation="vertical">
-		    <Button
-		      style="@style/main_button"
-		      android:id="@+id/btn_favorites"
-		      android:drawableStart="@drawable/rating_important"
-		      android:text="@string/main_favorites" />
-		    <Button
-		      style="@style/main_button"
-		      android:id="@+id/btn_search"
-		      android:drawableStart="@drawable/action_search"
-		      android:text="@string/main_search" />
+		        <Button
+		          style="@style/day_button"
+		          android:id="@+id/btn_day_2"
+		          android:drawableStart="@drawable/content_event"
+		          android:text="@string/main_sunday" />
+
+		    </LinearLayout>
+
+		    <LinearLayout
+		      android:id="@+id/btn_box_two"
+		      android:layout_below="@id/btn_box"
+		      android:layout_width="fill_parent"
+		      android:layout_height="wrap_content"
+		      android:orientation="vertical">
+			    <Button
+			      style="@style/main_button"
+			      android:id="@+id/btn_favorites"
+			      android:drawableStart="@drawable/rating_important"
+			      android:text="@string/main_favorites" />
+			    <Button
+			      style="@style/main_button"
+			      android:id="@+id/btn_search"
+			      android:drawableStart="@drawable/action_search"
+			      android:text="@string/main_search" />
+			</LinearLayout>
 		</LinearLayout>
 
 	    <LinearLayout
 	      android:id="@+id/status_box"
-	      android:layout_below="@id/btn_box_two"
+	      android:layout_below="@id/button_wrap"
 	      android:layout_width="fill_parent"
 	      android:orientation="vertical"
 	      android:layout_alignParentBottom="true"
@@ -68,12 +84,14 @@
 		      android:alpha="0.5"
 		      android:background="#ffffff"
 		      android:padding="5dp"
-		      android:orientation="vertical">
+		      android:orientation="vertical"
+		      android:gravity="center_horizontal">
 			    <TextView
 			      android:id="@+id/progress"
 			      android:visibility="gone" />
 			    <TextView
-			      android:id="@+id/db_ver" />
+			      android:id="@+id/db_ver"
+			      android:textSize="12sp" />
 			</LinearLayout>
 		</LinearLayout>
 
