--- a/app/res/values-v11/themes.xml
+++ b/app/res/values-v11/themes.xml
@@ -36,7 +36,7 @@
         <item name="android:paddingLeft">10dp</item>
         <item name="android:paddingRight">10dp</item>
         <item name="android:paddingTop">10dp</item>
-        <item name="android:textColor">@color/header_text</item>
+        <item name="android:textColor">@color/fosdem_purple</item>
         <item name="android:textSize">15sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textAllCaps">true</item>
